# vla-serving

./: README.md  pyproject.toml
examples/: README.md  __init__.py  dummy.yaml  dummy_service.py  run_dummy_client.py  run_dummy_server.py
vla_serving/: __init__.py  base_service.py  loader.py  logging_utils.py  sdk.py  server.py  server_core.py
