[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-serving"
version = "0.1.0"
description = "A serving framework for Vision-Language-Action (VLA) models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Xi Chen", email = "407081305@qq.com"},
]
keywords = ["vla", "vision", "language", "action", "serving", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/v-xchen-v/vla-serving"
Repository = "https://github.com/v-xchen-v/vla-serving.git"
Issues = "https://github.com/v-xchen-v/vla-serving/issues"

[project.scripts]
vla-serve = "vla_serving.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vla_serving*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true